--- a/src/main/resources/Messages.yml
+++ b/src/main/resources/Messages.yml
@@ -1,4 +1,5 @@
 Messages:
+  Prefix: '§8§l{§e§lBig Bang Shooter§8§l}'
   ArenaExists: '§cАрена с таким названием §lУЖЕ §cсуществует'
   ArenaNotExists: '§cАрена с таким названием §lНЕ §cсуществует'
   UserAlreadyInThisMatch: '§eВы уже участвуете в этом матче.'
@@ -9,3 +10,13 @@ Messages:
   LobbyStartInTitleHeader: '§bНачало игры через §d§l{seconds} §bсек...'
   LobbyStartInTitleFooter: '§6§l***'
   MatchIsFull: '§eВ данном матче нет свободных мест.'
+  EditItemsGiven: '§fПредметы для настройки арены выданы.'
+  ArenaCreated: '§fАрена §e§l{ID} §fсоздана.'
+  ArenaLobbySet: '§fТочка лобби для арена §e§l{ID} §fустановлена.'
+  ArenaNeedLobbySet: '§eДля включения арены §e§l{ID} §eустановите точку лобби.'
+  ArenaNeedTeamSpawns: '§eДля включения арены §e§l{ID} §eустановите точку спавнов команд.'
+  ArenaTeamSpawnAdd: '§bСпавн для команды {team} §bдобавлен на арену §e§l{ID}§b.'
+  SpawnSelectorItemMetaError: '§c§lОшибка отметчика спавнов: §cнет мета-данных на предмете.'
+  SpawnSelectorLoreError: '§c§lОшибка отметчика спавнов: §cнет описания предмета.'
+  SpawnSelectorLoreSizeError: '§c§lОшибка отметчика спавнов: §cне хватает строчек описания.'
+  SpawnSelectorTeamNotFound: '§c§lОшибка отметчика спавнов: §cкоманды не существует.'
